--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
     API Externa
   </button>
 
-  <button onclick="window.open('http://TUDOMINIO-EC2.compute.amazonaws.com', '_blank')">
+  <button onclick="window.open('http://184.72.112.212:5000/', '_blank')">
     Despliegue desde EC2
   </button>
 
